The file has been updated

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 
         <div id="content">
-            <h1>Home Page</h1>
+            <h1>Landing Page</h1>
         </div>
         </div>
 
