search data was added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     type="text"
                     placeholder="Search"
                     />
-                    <button class="btn btn-danger" type="submit">Search</button>
+                    <button class="btn btn-danger" type="submit">Search data</button>
                 </form>
                 </li>
             </ul>
